--- a/templates/generic.html
+++ b/templates/generic.html
@@ -15,7 +15,7 @@
 			<!-- Contains title and navigation. -->
 			<div id="topbartitle">
 				{% block topbartitle %}
-				<img src = "http://www.stanford.edu/~gokulr/database/logo.png" alt="logo" height = "150" width = "550">
+				<img src = "http://www.stanford.edu/~gokulr/database/logo.png" alt="logo" height = "150" width = "880"> <!--550-->
 				{% endblock %}
 			</div>
 			<div id="nav">
