--- a/templates/download.html
+++ b/templates/download.html
@@ -9,13 +9,13 @@
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_RepetitiveNonAlu_hg19.txt">Repetitive non-Alu sites</a><br>
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_NonRepetitive_hg19.txt">Non-repetitive sites</a><br>
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_all_hg19.bed">BED file to make UCSC browser custom track</a><br>
-<a href="http://www.stanford.edu/~gokulr/database/human_hg19_rnaseqinfo.txt">Supporting data from RNA-seq</a>
+<a href="http://www.stanford.edu/~gokulr/database/human_hg19_rnaseqinfo.txt">Human editing level measurements</a>
 <p><span style="text-decoration: underline;"><strong>Mouse</strong></span></p>
 <a href="http://www.stanford.edu/~gokulr/database/Mouse_AG_all_mm9.txt">Mouse sites</a><br>
 <a href="http://www.stanford.edu/~gokulr/database/Mouse_AG_all_mm9.bed">BED file to make UCSC browser custom track</a><br>
-<a href="http://www.stanford.edu/~gokulr/database/mouse_mm9_rnaseqinfo.txt">Supporting data from RNA-seq</a>
+<a href="http://www.stanford.edu/~gokulr/database/mouse_mm9_rnaseqinfo.txt">Mouse editing level measurements</a>
 <p><span style="text-decoration: underline;"><strong>Fly</strong></span></p>
 <a href="http://www.stanford.edu/~gokulr/database/Fly_AG_all_dm3.txt">Fly sites</a><br>
 <a href="http://www.stanford.edu/~gokulr/database/Fly_AG_all_dm3.bed">BED file to make UCSC browser custom track</a><br>
-<a href="http://www.stanford.edu/~gokulr/database/fly_dm3_rnaseqinfo.txt">Supporting data from RNA-seq</a>
+<a href="http://www.stanford.edu/~gokulr/database/fly_dm3_rnaseqinfo.txt">Fly editing level measurements</a>
 {% endblock %}
