added fifth htr2c nonsyn site

--- a/templates/literature.html
+++ b/templates/literature.html
@@ -6,6 +6,7 @@
 <p><span style="text-decoration: underline;"><strong>Human</strong></span></p>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/1717158" target="_blank">Sommer et al. 1991. Cell</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/9153397" target="_blank">Burns et al. 1997. Nature</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/9928237" target="_blank">Niswender, Sanders-Bush & Emeson 1998. Ann NY Acad Sci</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/10828597" target="_blank">Barbon & Barlati 2000. Cytogenetics and Cell Genetics</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/15361858" target="_blank">Bhalla et al. 2004. Nature Structural and Molecular Biology</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/15797904" target="_blank">Clutterbuck et al. 2005. Bioinformatics</a><br>
