--- a/templates/about.html
+++ b/templates/about.html
@@ -5,4 +5,6 @@
 {% block content %}
 <p><a href="http://en.wikipedia.org/wiki/RNA_editing">RNA editing</a> is the post-transcriptional modification of RNA nucleotides from their genome encoded sequence. The most common type of editing in metazoans is deamination of Adenosine into Inosine catalyzed by the ADAR family of proteins. Subsequently, Inosine is interpreted as Guanosine by the cellular machinery.</p>
 <p>The development of high-throughput sequencing technologies has enabled the transcriptome-wide identification of A-to-I editing sites. This database aims to present a comprehensive collection of A-to-I editing sites in human, mouse, and fly transcripts. Useful annotations were incorporated as described in the tutorial.</p>
+<p> News:</p>
+<p> October 25, 2013: The RADAR manuscript is now online at Nucleic Acids Research! <a href="http://nar.oxfordjournals.org/content/early/2013/10/25/nar.gkt996.full" target="blank">RADAR: a rigorously annotated database of A-to-I RNA editing</a></p>
 {% endblock %}
