added studies for version 2

--- a/templates/literature.html
+++ b/templates/literature.html
@@ -3,6 +3,19 @@
 {% block pgtitle %}Literature{% endblock %}
 
 {% block content %}
+<p><strong>Added to version 2</strong></p>
+<p><span style="text-decoration: underline;"><strong>Human</strong></span></p>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/23818636" target="_blank">Chen 2013. PNAS</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/22957051" target="_blank">Picardi et al. 2012. PLoS One</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/24347612" target="_blank">Bazak et al. 2014. Genome Research</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/23537002" target="_blank">Zhu et al. 2013. BMC Genomics</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/25158696" target="_blank">Porath, Carmi & Levanon 2014. Nature Communications</a><br>
+<p><span style="text-decoration: underline;"><strong>Mouse</strong></span></p>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/22448268" target="_blank">Gu et al. 2012. PLoS One</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/23264566" target="_blank">Cattenoz et al. 2013. RNA</a><br>
+<p><span style="text-decoration: underline;"><strong>Fly</strong></span></p>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/24077224" target="_blank">St Laurent et al. 2013. Nature Structural and Molecular Biology</a><br><br>
+<p><strong>version 1</strong></p>
 <p><span style="text-decoration: underline;"><strong>Human</strong></span></p>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/1717158" target="_blank">Sommer et al. 1991. Cell</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/9153397" target="_blank">Burns et al. 1997. Nature</a><br>
@@ -13,7 +26,6 @@
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/15731336" target="_blank">Levanon et al. 2005. Nucleic Acids Research</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/17369310" target="_blank">Ohlson et al. 2007. RNA</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/18772245" target="_blank">Gommans et al. 2008. RNA</a><br>
-
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/19478186" target="_blank">Li et al. 2009. Science</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/20547637" target="_blank">Kiran & Baranov 2010. Bioinformatics</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/20835228" target="_blank">Sakurai et al. 2010. Nature Chemical Biology</a><br>
