changed about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,6 +6,6 @@
 <p><a href="http://en.wikipedia.org/wiki/RNA_editing">RNA editing</a> is the post-transcriptional modification of RNA nucleotides from their genome encoded sequence. The most common type of editing in metazoans is deamination of Adenosine into Inosine catalyzed by the ADAR family of proteins. Subsequently, Inosine is interpreted as Guanosine by the cellular machinery.</p>
 <p>The development of high-throughput sequencing technologies has enabled the transcriptome-wide identification of A-to-I editing sites. This database aims to present a comprehensive collection of A-to-I editing sites in human, mouse, and fly transcripts. Useful annotations were incorporated as described in the tutorial.</p>
 <p> News:</p>
-<p> December 24, 2014: RADAR has been updated to version 2! We have added 8 additional papers to the database. We also removed ~3,000 genomic SNPs.</p>
+<p> December 24, 2014: RADAR has been updated to version 2! We have added 8 additional papers to the database. We also removed ~3,000 human genomic SNPs from the database.</p>
 <p> October 25, 2013: The RADAR manuscript is now online at Nucleic Acids Research! <a href="http://nar.oxfordjournals.org/content/42/D1/D109" target="blank">RADAR: a rigorously annotated database of A-to-I RNA editing</a></p>
 {% endblock %}
