updated download page for V2

--- a/templates/download.html
+++ b/templates/download.html
@@ -3,6 +3,17 @@
 {% block pgtitle %}Download{% endblock %}
 
 {% block content %}
+<p><strong>version 2</strong></p>
+<p><span style="text-decoration: underline;"><strong>Human (hg19)</strong></span></p>
+<a href="http://www.stanford.edu/~gokulr/database/Human_AG_all_hg19_v2.txt">All sites</a><br>
+<a href="http://www.stanford.edu/~gokulr/database/Human_AG_Alu_hg19_v2.txt">Alu sites</a><br>
+<a href="http://www.stanford.edu/~gokulr/database/Human_AG_RepetitiveNonAlu_hg19_v2.txt">Repetitive non-Alu sites</a><br>
+<a href="http://www.stanford.edu/~gokulr/database/Human_AG_NonRepetitive_hg19_v2.txt">Non-repetitive sites</a><br>
+<p><span style="text-decoration: underline;"><strong>Mouse (mm9)</strong></span></p>
+<a href="http://www.stanford.edu/~gokulr/database/Mouse_AG_all_mm9_v2.txt">Mouse sites</a><br>
+<p><span style="text-decoration: underline;"><strong>Fly (dm3)</strong></span></p>
+<a href="http://www.stanford.edu/~gokulr/database/Fly_AG_all_dm3_v2.txt">Fly sites</a><br><br>
+<p><strong>version 1</strong></p>
 <p><span style="text-decoration: underline;"><strong>Human (hg19)</strong></span></p>
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_all_hg19.txt">All sites</a><br>
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_Alu_hg19.txt">Alu sites</a><br>
